  by all derived classes, if you have user-defined event classes please
  add "wxEvent *Clone() const { return new MyEvent(*this); }" line to them

- wxCondition now must be used with a mutex, please read the (updated) class
  documentation for details and revise your code accordingly: this change was
  unfortunately needed as the old class didn't behave correctly in all cases

All (GUI):

- the event type constants are not constants any more but are dynamically
  allocated during run-time which means that they can't be used as case labels
  in the switch()es, you must rewrite them to use if()s instead

  You may also define WXWIN_COMPATIBILITY_EVENT_TYPES to get the old behaviour
  but this is strongly discouraged, please consider changing your codei
  instead!

- wxDialog does not derive from wxPanel any longer - if you were using it in
  your code, please update it. The quick fix for the most cases is to replace
  the occurences of wxPanel with wxWindow.

- wxYES_NO is now wxYES | wxNO and the manifest values of both wxYES and wxNO
  have changed (to fix some unfortunate clashes), please check your code to
  ensure that no tests for wxYES or wxNO are broken: for example, the following
  will *NOT* work any longer:

        if ( flags & wxYES_NO )
                ... do something ...
        if ( flags & wxYES )
                ... do something else ...

- wxGLCanvas now derives directly from wxWindow, not wxScrolledWindow

- wxGridCellAttrProvider class API changed, you will need to update your code
  if you derived any classes from it

- wxImage::ComputeHistogram()'s signature changed to 
  unsigned long ComputeHistogram(wxImageHistogram&) const

- wxEvtHandler cannot be copied/assigned any longer - this never worked but
  now it results in compile-time error instead of run-time crashes

- WXK_NUMLOCK and WXK_SCROLL keys no longer result in EVT_CHAR() events,
  they only generate EVT_KEY_DOWN/UP() ones

wxMSW:
